[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemy/MaskGuy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://FightSystem/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://FightSystem/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 12.0

[sub_resource type="Animation" id=7]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunRight"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 2 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 14.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 14.0
height = 16.0

[sub_resource type="CircleShape2D" id=10]
radius = 140.004

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.732, 1.807 )
texture = ExtResource( 1 )
hframes = 5

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -1, 12 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/RunRight = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 6 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

<<<<<<< HEAD
[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 130
=======
[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 10 )
>>>>>>> develop

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]

<<<<<<< HEAD
[connection signal="area_entered" from="Hurt" to="." method="_on_Hurt_area_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
=======
[editable path="HitBox"]
[editable path="HurtBox"]
>>>>>>> develop
